test_scores/negative_dimers/features/O14964.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/O14964.pkl.xz